[package]
name = "hrw-hash"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "A minimalistic implementation of the Highest Random Weight (HRW) aka Rendezvous hashing algorithm"
homepage = "https://github.com/farazdagi/hrw-hash"
repository = "https://github.com/farazdagi/hrw-hash"
documentation = "https://docs.rs/hrw-hash"
readme = "README.md"
keywords = ["consistent-hashing", "rendezvous", "hash"]
categories = ["algorithms", "data-structures"]

[dependencies]
rapidhash = "1.4"
